# wonderhoy-bot

./: .gitignore  CMakeLists.txt  build-skia.ps1  build-skia.sh
assets/: characters.json  characters_prev.json
cmake/: FindSkia.cmake
src/: bot.cpp  bot.h  main.cpp
src/commands/: characters.cpp  code.cpp  command_handler.cpp  command_handler.h  create.cpp  support.cpp
src/data/: characters.cpp  characters.h
src/modules/: create_sticker.cpp  create_sticker.h
src/utils/: parse_emoji.cpp  parse_emoji.h  parse_hex_color.cpp  parse_hex_color.h
